Fix the overflow issue of the list

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -187,7 +187,6 @@ project Dhadda's Detailing: https://rdhadda.github.io/Dhaddas-Detailing/index.ht
     width: 270px;
     line-height: .8rem;
     margin-top: .5rem;
-    margin-left: 1.5rem;
     font-size: 80%;
 }
 
@@ -242,7 +241,6 @@ h4 {
     width: 270px;
     line-height: .8rem;
     margin-top: .5rem;
-    margin-left: 1.5rem;
     font-size: 80%;
 }
 
@@ -319,7 +317,6 @@ project Dhadda's Detailing: https://rdhadda.github.io/Dhaddas-Detailing/index.ht
     width: 270px;
     line-height: .8rem;
     margin-top: .5rem;
-    margin-left: 1.5rem;
     font-size: 80%;
 }
 
